--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
 
             <div id="ad-container" style="margin-top: 20px; background:#fff; padding:5px; border-radius:8px; min-height:250px;">
                  <script type="text/javascript">
-                    atOptions = { 'key' : '78fb5625f558f9e3c9b37b431fe339cb', 'format' : 'iframe', 'height' : 250, 'width' : 300, 'params' : {} };
+                    atOptions = {
+                        'key' : '8806e983d7b1aa394a76278f45c55249',
+                        'format' : 'iframe',
+                        'height' : 250,
+                        'width' : 300,
+                        'params' : {}
+                    };
                 </script>
-                <script type="text/javascript" src="//www.effectivegatecpm.com/erzanv6a5?key=78fb5625f558f9e3c9b37b431fe339cb"></script>
+                <script type="text/javascript" src="https://www.highperformanceformat.com/8806e983d7b1aa394a76278f45c55249/invoke.js"></script>
             </div>
         </div>
 
@@ -100,7 +106,7 @@
             if (window.initGame) window.initGame(diff);
         };
     </script>
-    <script type="module" src="./js/game-main.js?v=2.56"></script>
+    <script type="module" src="./js/game-main.js?v=2.57"></script>
     <script type="module" src="./js/index.js"></script>
 </body>
 </html>
