--- a/leaderboard.html
+++ b/leaderboard.html
@@ -9,14 +9,14 @@
         body { text-align: center; color: white; background-color: #2c3e50; font-family: sans-serif; }
         table { width: 90%; max-width: 500px; margin: 20px auto; border-collapse: collapse; background: #1e1e1e; border-radius: 10px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
         th, td { padding: 15px; border-bottom: 1px solid #333; text-align: center; }
-        th { background: #111; color: var(--accent, gold); font-size: 0.9rem; letter-spacing: 1px; }
+        th { background: #111; color: #f1c40f; font-size: 0.9rem; letter-spacing: 1px; }
         .rank-1 td { color: gold; font-weight: bold; background: rgba(255, 215, 0, 0.1); }
         .rank-2 td { color: silver; font-weight: bold; background: rgba(192, 192, 192, 0.1); }
         .rank-3 td { color: #cd7f32; font-weight: bold; background: rgba(205, 127, 50, 0.1); }
     </style>
 </head>
 <body>
-    <h1 style="margin-top: 30px; color: #f1c40f; text-shadow: 0 2px 5px rgba(0,0,0,0.5);">HALL OF FAME</h1>
+    <h1 style="margin-top: 30px; color: #f1c40f;">HALL OF FAME</h1>
     
     <div class="mode-selector">
         <button class="btn" onclick="loadRank('EASY')">EASY</button>
@@ -32,7 +32,7 @@
             <tr>
                 <th width="15%">#</th>
                 <th width="50%">NAME</th>
-                <th width="35%">BEST BLOCK</th>
+                <th width="35%">SCORE</th>
             </tr>
         </thead>
         <tbody id="rank-list"></tbody>
@@ -62,7 +62,7 @@
                     <tr class="${rankClass}">
                         <td>${index + 1}</td>
                         <td style="text-align:left; padding-left:20px;">${item.username}</td>
-                        <td style="font-size:1.2rem; font-weight:bold;">${item.bestChar}</td>
+                        <td style="font-size:1.2rem; font-weight:bold;">${item.score ? item.score.toLocaleString() : 0}</td>
                     </tr>
                 `;
                 list.innerHTML += row;
