--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Alpha-Z: The Alphabet Puzzle">
     <meta property="og:description" content="Can you reach the letter Z? Merge blocks and challenge your brain!">
-    <meta property="og:image" content="./icon-512.png">
+    <meta property="og:image" content="./og-image.png">
     <meta property="og:url" content="https://alpha-z.pages.dev">
 
     <link rel="icon" type="image/png" href="./favicon.png">
