--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <meta property="og:title" content="Alpha-Z: The Alphabet Puzzle">
     <meta property="og:description" content="Can you reach the letter Z? Merge blocks and challenge your brain!">
     <meta property="og:image" content="./og-image.png">
+    
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="./og-image.png?v=1.1">
+    
     <meta property="og:url" content="https://alpha-z.pages.dev">
 
     <link rel="icon" type="image/png" href="./favicon.png">
