--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
     </style>
 </head>
 <body class="main-bg">
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js')
+                    .then((registration) => {
+                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                    }, (err) => {
+                        console.log('ServiceWorker registration failed: ', err);
+                    });
+            });
+        }
+    </script>
     <div class="screen">
         <h1 style="font-size: 3.5rem; color: var(--accent); margin-bottom: 20px;">Alpha-Z</h1>
         <div style="font-size: 0.8rem; color: #555; margin-top: -15px; margin-bottom: 15px;">v1.1</div>
